Add version section, improve menu behaviour

--- a/au.org.libraryforall.updater.app/build.gradle
+++ b/au.org.libraryforall.updater.app/build.gradle
@@ -22,3 +22,40 @@ dependencies {
   implementation libraries.irradiaHTTPAPI
   implementation libraries.irradiaHTTPVanilla
 }
+
+def versionValues() {
+  def propsFile = file('version.properties')
+  def Properties props = new Properties()
+  def code
+  if (propsFile.canRead()) {
+    props.load(new FileInputStream(propsFile))
+    code = props['versionCode'].toInteger()
+  } else {
+    throw new FileNotFoundException("Could not read version.properties!")
+  }
+
+  props['versionCode'] = (code + 1).toString()
+  props.store(new FileOutputStream(propsFile), "")
+
+  logger.info("incrementing build version ${code} -> ${code + 1}")
+  return code
+}
+
+def getGitHash = { ->
+  def stdout = new ByteArrayOutputStream()
+  exec {
+    commandLine 'git', 'rev-parse', 'HEAD'
+    standardOutput = stdout
+  }
+  return stdout.toString().trim()
+}
+
+android {
+  def version = versionValues()
+
+  defaultConfig {
+    buildConfigField "String", "GIT_COMMIT", "\"${getGitHash()}\""
+    versionName = VERSION_NAME
+    versionCode = version
+  }
+}
