Improve test suite, build configuration

--- a/au.org.libraryforall.updater.app/build.gradle
+++ b/au.org.libraryforall.updater.app/build.gradle
@@ -57,5 +57,6 @@ android {
     buildConfigField "String", "GIT_COMMIT", "\"${getGitHash()}\""
     versionName = VERSION_NAME
     versionCode = version
+    setProperty("archivesBaseName", "lfa-updater-${versionName}-${versionCode}")
   }
 }
