--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ ext {
 }
 
 ext.libraries = [
+  OSGiBundleAnnotation       : "org.osgi:org.osgi.annotation.bundle:1.0.0",
+  OSGiBundleVersionAnnotation: "org.osgi:org.osgi.annotation.versioning:1.0.0",
   androidMaterial            : "com.google.android.material:material:1.0.0",
   androidSupportTestRules    : "com.android.support.test:rules:1.0.2",
   androidSupportTestRunner   : "com.android.support.test:runner:1.0.2",
@@ -53,25 +55,24 @@ ext.libraries = [
   androidXAppCompat          : "androidx.appcompat:appcompat:1.1.0-alpha04",
   androidXConstraintLayout   : "androidx.constraintlayout:constraintlayout:1.1.3",
   androidXCore               : "androidx.core:core-ktx:1.0.1",
-  conductor                  : "com.bluelinelabs:conductor:3.0.0-rc1",
   commonsCodec               : "commons-codec:commons-codec:1.12",
-  jcip                       : "com.io7m.jcip:jcip-annotations:1.0.2",
+  conductor                  : "com.bluelinelabs:conductor:3.0.0-rc1",
   googleGuava                : "com.google.guava:guava:27.1-android",
+  irradiaHTTPAPI             : "one.irradia.http:one.irradia.http.api:0.0.1",
+  irradiaHTTPVanilla         : "one.irradia.http:one.irradia.http.vanilla:0.0.1",
   jackson                    : "com.fasterxml.jackson.core:jackson-core:2.9.8",
+  jcip                       : "com.io7m.jcip:jcip-annotations:1.0.2",
   jodaTime                   : "joda-time:joda-time:2.10.1",
   junit                      : "junit:junit:4.12",
-  mockito                    : "org.mockito:mockito-core:2.27.0",
   kotlinReflect              : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
   kotlinStdlib               : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
   logbackAndroid             : "com.github.tony19:logback-android:2.0.0",
   logbackClassic             : "ch.qos.logback:logback-classic:1.3.0-alpha4",
+  mockito                    : "org.mockito:mockito-core:2.27.0",
+  nanohttpd                  : 'org.nanohttpd:nanohttpd:2.3.1',
   okhttp                     : "com.squareup.okhttp3:okhttp:3.14.1",
   rxjava                     : "io.reactivex.rxjava2:rxjava:2.2.8",
   slf4j                      : "org.slf4j:slf4j-api:1.7.25",
-  OSGiBundleAnnotation       : "org.osgi:org.osgi.annotation.bundle:1.0.0",
-  OSGiBundleVersionAnnotation: "org.osgi:org.osgi.annotation.versioning:1.0.0",
-  irradiaHTTPAPI             : "one.irradia.http:one.irradia.http.api:0.0.1",
-  irradiaHTTPVanilla         : "one.irradia.http:one.irradia.http.vanilla:0.0.1"
 ]
 
 apply plugin: "io.codearte.nexus-staging"
