--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,9 @@ include ":au.org.libraryforall.updater.app"
 include ":au.org.libraryforall.updater.apkinstaller.api"
 include ":au.org.libraryforall.updater.apkinstaller.device"
 include ":au.org.libraryforall.updater.repository.api"
-include ":au.org.libraryforall.updater.repository.xml"
+include ":au.org.libraryforall.updater.repository.xml.spi"
+include ":au.org.libraryforall.updater.repository.xml.api"
+include ":au.org.libraryforall.updater.repository.xml.v1_0"
 include ":au.org.libraryforall.updater.inventory.api"
 include ":au.org.libraryforall.updater.inventory.vanilla"
 include ":au.org.libraryforall.updater.installed.api"
