--- a/au.org.libraryforall.updater.app/build.gradle
+++ b/au.org.libraryforall.updater.app/build.gradle
@@ -6,6 +6,9 @@ dependencies {
   implementation project(":au.org.libraryforall.updater.inventory.api")
   implementation project(":au.org.libraryforall.updater.inventory.vanilla")
   implementation project(":au.org.libraryforall.updater.repository.api")
+  implementation project(":au.org.libraryforall.updater.repository.xml.api")
+  implementation project(":au.org.libraryforall.updater.repository.xml.spi")
+  implementation project(":au.org.libraryforall.updater.repository.xml.v1_0")
 
   implementation libraries.androidMaterial
   implementation libraries.androidXActivity
