--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:3.4.0"
+    classpath 'com.android.tools.build:gradle:3.4.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath "digital.wup:android-maven-publish:3.6.2"
     classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.20.0"
@@ -73,6 +73,7 @@ ext.libraries = [
   okhttp                     : "com.squareup.okhttp3:okhttp:3.14.1",
   rxjava                     : "io.reactivex.rxjava2:rxjava:2.2.8",
   slf4j                      : "org.slf4j:slf4j-api:1.7.25",
+  xerces                     : "xerces:xercesImpl:2.12.0"
 ]
 
 apply plugin: "io.codearte.nexus-staging"
