Load database on startup, embed source URIs in repositories

--- a/au.org.libraryforall.updater.repository.xml.v1_0/build.gradle
+++ b/au.org.libraryforall.updater.repository.xml.v1_0/build.gradle
@@ -6,6 +6,7 @@ dependencies {
   implementation libraries.kotlinStdlib
   implementation libraries.jodaTime
   implementation libraries.rxjava
+  implementation libraries.slf4j
 
   compileOnly libraries.OSGiBundleAnnotation
   compileOnly libraries.OSGiBundleVersionAnnotation
