--- a/au.org.libraryforall.updater.app/src/main/AndroidManifest.xml
+++ b/au.org.libraryforall.updater.app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
   <application android:name="au.org.libraryforall.updater.app.MainApplication">
     <provider
@@ -14,8 +15,22 @@
       android:grantUriPermissions="true">
       <meta-data
         android:name="android.support.FILE_PROVIDER_PATHS"
-        android:resource="@xml/provider_paths"/>
+        android:resource="@xml/provider_paths" />
     </provider>
+
+    <receiver
+      android:name="au.org.libraryforall.updater.app.MainPackageReceiver"
+      android:enabled="true"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.PACKAGE_ADDED" />
+        <action android:name="android.intent.action.PACKAGE_CHANGED" />
+        <action android:name="android.intent.action.PACKAGE_REMOVED" />
+        <action android:name="android.intent.action.PACKAGE_REPLACED" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:scheme="package" />
+      </intent-filter>
+    </receiver>
 
     <activity
       android:name="au.org.libraryforall.updater.app.MainActivity"
