Implement more reliable install logic
This uses both a background task that publishes package events,
and an activity with request codes (without NEW_TASK). This
appears to give the correct results in all conditions.

Fix: https://github.com/AULFA/updater/issues/4

--- a/au.org.libraryforall.updater.apkinstaller.device/build.gradle
+++ b/au.org.libraryforall.updater.apkinstaller.device/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   api project(":au.org.libraryforall.updater.apkinstaller.api")
+  api project(":au.org.libraryforall.updater.installed.api")
 
   implementation libraries.androidXCore
   implementation libraries.kotlinStdlib
