--- a/au.org.libraryforall.updater.installed.api/build.gradle
+++ b/au.org.libraryforall.updater.installed.api/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
+  api libraries.jodaTime
+  api libraries.rxjava
+
   implementation libraries.kotlinStdlib
-  implementation libraries.jodaTime
-  implementation libraries.rxjava
 
   compileOnly libraries.OSGiBundleAnnotation
   compileOnly libraries.OSGiBundleVersionAnnotation
