Add download integration tests

--- a/au.org.libraryforall.updater.tests/build.gradle
+++ b/au.org.libraryforall.updater.tests/build.gradle
@@ -11,6 +11,8 @@ dependencies {
   implementation libraries.slf4j
   implementation libraries.junit
   implementation libraries.irradiaHTTPAPI
+  implementation libraries.irradiaHTTPVanilla
+  implementation libraries.nanohttpd
 
   testImplementation libraries.logbackClassic
 }
