--- a/build.gradle
+++ b/build.gradle
@@ -12,20 +12,21 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.5.0'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:4.2.0"
+    classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.15.0"
     classpath "digital.wup:android-maven-publish:3.6.2"
     classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.0"
-    classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.15.0"
-    classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:4.2.0"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.android.tools.build:gradle:3.5.0'
   }
 }
 
 plugins {
-  id "ru.vyarus.animalsniffer" version "1.5.0"
-  id "io.codearte.nexus-staging" version "0.21.0"
+  id "com.github.ben-manes.versions" version "0.22.0"
   id "com.vanniktech.android.junit.jacoco" version "0.15.0"
   id "digital.wup.android-maven-publish" version "3.6.2"
+  id "io.codearte.nexus-staging" version "0.21.0"
+  id "ru.vyarus.animalsniffer" version "1.5.0"
 }
 
 ext {
