--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
 }
 
 plugins {
-  id "com.github.ben-manes.versions" version "0.22.0"
+  id "com.github.ben-manes.versions" version "0.23.0"
   id "com.vanniktech.android.junit.jacoco" version "0.15.0"
   id "digital.wup.android-maven-publish" version "3.6.2"
   id "io.codearte.nexus-staging" version "0.21.0"
@@ -47,22 +47,22 @@ ext {
 
 ext.libraries = [
   OSGiBundleAnnotation       : "org.osgi:org.osgi.annotation.bundle:1.0.0",
-  OSGiBundleVersionAnnotation: "org.osgi:org.osgi.annotation.versioning:1.0.0",
+  OSGiBundleVersionAnnotation: "org.osgi:org.osgi.annotation.versioning:1.1.0",
   androidMaterial            : "com.google.android.material:material:1.0.0",
   androidSupportTestRules    : "com.android.support.test:rules:1.0.2",
   androidSupportTestRunner   : "com.android.support.test:runner:1.0.2",
   androidTestOrchestrator    : "com.android.support.test:orchestrator:1.0.2",
-  androidXActivity           : "androidx.activity:activity-ktx:1.0.0-alpha06",
-  androidXAppCompat          : "androidx.appcompat:appcompat:1.1.0-alpha04",
+  androidXActivity           : "androidx.activity:activity-ktx:1.1.0-alpha02",
+  androidXAppCompat          : "androidx.appcompat:appcompat:1.1.0-rc01",
   androidXConstraintLayout   : "androidx.constraintlayout:constraintlayout:1.1.3",
-  androidXCore               : "androidx.core:core-ktx:1.0.1",
-  conductor                  : "com.bluelinelabs:conductor:3.0.0-rc1",
+  androidXCore               : "androidx.core:core-ktx:1.2.0-alpha03",
+  conductor                  : "com.bluelinelabs:conductor:3.0.0-rc2",
   googleGuava                : "com.google.guava:guava:27.1-android",
   irradiaHTTPAPI             : "one.irradia.http:one.irradia.http.api:0.0.1",
   irradiaHTTPVanilla         : "one.irradia.http:one.irradia.http.vanilla:0.0.1",
   jackson                    : "com.fasterxml.jackson.core:jackson-core:2.9.8",
   jcip                       : "com.io7m.jcip:jcip-annotations:1.0.2",
-  jodaTime                   : "joda-time:joda-time:2.10.1",
+  jodaTime                   : "joda-time:joda-time:2.10.3",
   junit                      : "junit:junit:4.12",
   kotlinReflect              : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
   kotlinStdlib               : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
@@ -71,7 +71,7 @@ ext.libraries = [
   mockito                    : "org.mockito:mockito-core:2.27.0",
   nanohttpd                  : 'org.nanohttpd:nanohttpd:2.3.1',
   okhttp                     : "com.squareup.okhttp3:okhttp:3.14.1",
-  rxjava                     : "io.reactivex.rxjava2:rxjava:2.2.8",
+  rxjava                     : "io.reactivex.rxjava2:rxjava:2.2.12",
   slf4j                      : "org.slf4j:slf4j-api:1.7.25",
   xerces                     : "xerces:xercesImpl:2.12.0"
 ]
@@ -144,6 +144,9 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
           sourceCompatibility JavaVersion.VERSION_1_8
           targetCompatibility JavaVersion.VERSION_1_8
         }
+        kotlinOptions {
+          jvmTarget = JavaVersion.VERSION_1_8
+        }
       }
       break
 
@@ -165,6 +168,9 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
         compileOptions {
           sourceCompatibility JavaVersion.VERSION_1_8
           targetCompatibility JavaVersion.VERSION_1_8
+        }
+        kotlinOptions {
+          jvmTarget = JavaVersion.VERSION_1_8
         }
         testOptions {
           execution "ANDROID_TEST_ORCHESTRATOR"
