--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,6 @@ ext {
 }
 
 ext.libraries = [
-  OSGiBundleAnnotation       : "org.osgi:org.osgi.annotation.bundle:1.0.0",
-  OSGiBundleVersionAnnotation: "org.osgi:org.osgi.annotation.versioning:1.1.0",
   androidMaterial            : "com.google.android.material:material:1.0.0",
   androidSupportTestRules    : "com.android.support.test:rules:1.0.2",
   androidSupportTestRunner   : "com.android.support.test:runner:1.0.2",
@@ -56,6 +54,7 @@ ext.libraries = [
   androidXAppCompat          : "androidx.appcompat:appcompat:1.1.0-rc01",
   androidXConstraintLayout   : "androidx.constraintlayout:constraintlayout:1.1.3",
   androidXCore               : "androidx.core:core-ktx:1.2.0-alpha03",
+  androidXWorkManager        : "androidx.work:work-runtime-ktx:2.2.0",
   conductor                  : "com.bluelinelabs:conductor:3.0.0-rc2",
   googleGuava                : "com.google.guava:guava:27.1-android",
   irradiaHTTPAPI             : "one.irradia.http:one.irradia.http.api:0.0.1",
@@ -71,6 +70,8 @@ ext.libraries = [
   mockito                    : "org.mockito:mockito-core:2.27.0",
   nanohttpd                  : 'org.nanohttpd:nanohttpd:2.3.1',
   okhttp                     : "com.squareup.okhttp3:okhttp:3.14.1",
+  OSGiBundleAnnotation       : "org.osgi:org.osgi.annotation.bundle:1.0.0",
+  OSGiBundleVersionAnnotation: "org.osgi:org.osgi.annotation.versioning:1.1.0",
   rxjava                     : "io.reactivex.rxjava2:rxjava:2.2.12",
   slf4j                      : "org.slf4j:slf4j-api:1.7.25",
   xerces                     : "xerces:xercesImpl:2.12.0"
