Initial task refactoring
This performs the initial refactoring of the application in order
to make it possible to extend the code to support downloading and
installing OPDS packages.

The existing task monad types were replaced with a more principled
type, and the tasks themselves were replaced with implementations
that aggressively retry operations in the case of failures.

Additionally, a service directory type was introduced in order to
reduce coupling between application components.

--- a/au.org.libraryforall.updater.inventory.api/build.gradle
+++ b/au.org.libraryforall.updater.inventory.api/build.gradle
@@ -2,10 +2,11 @@ dependencies {
   api project(":au.org.libraryforall.updater.repository.api")
   api project(":au.org.libraryforall.updater.installed.api")
 
-  api libraries.kotlinStdlib
-  api libraries.jodaTime
-  api libraries.rxjava
   api libraries.googleGuava
+  api libraries.irradiaHTTPAPI
+  api libraries.jodaTime
+  api libraries.kotlinStdlib
+  api libraries.rxjava
 
   compileOnly libraries.jcip
   compileOnly libraries.OSGiBundleAnnotation
