--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include ":au.org.libraryforall.updater.repository.api"
 include ":au.org.libraryforall.updater.repository.xml.api"
 include ":au.org.libraryforall.updater.repository.xml.spi"
 include ":au.org.libraryforall.updater.repository.xml.v1_0"
+include ":au.org.libraryforall.updater.services.api"
 include ":au.org.libraryforall.updater.tests"
