Add support for v2 repositories
This adds the necessary support for v2 repositories.

--- a/au.org.libraryforall.updater.app/build.gradle
+++ b/au.org.libraryforall.updater.app/build.gradle
@@ -9,6 +9,7 @@ dependencies {
   implementation project(":au.org.libraryforall.updater.repository.xml.api")
   implementation project(":au.org.libraryforall.updater.repository.xml.spi")
   implementation project(":au.org.libraryforall.updater.repository.xml.v1_0")
+  implementation project(":au.org.libraryforall.updater.repository.xml.v2_0")
 
   implementation libraries.androidMaterial
   implementation libraries.androidXActivity
