--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,6 @@ include ":au.org.libraryforall.updater.repository.api"
 include ":au.org.libraryforall.updater.repository.xml.api"
 include ":au.org.libraryforall.updater.repository.xml.spi"
 include ":au.org.libraryforall.updater.repository.xml.v1_0"
+include ":au.org.libraryforall.updater.repository.xml.v2_0"
 include ":au.org.libraryforall.updater.services.api"
 include ":au.org.libraryforall.updater.tests"
