Refactor XML SPI
This refactors the XML SPI classes to remove the assumption that the
only things we will parse will be repositories. We will be using the
SPI shortly to allow for parsing OPDS manifests.

Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.repository.xml.v1_0/build.gradle
+++ b/one.lfa.updater.repository.xml.v1_0/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
-  api project(":one.lfa.updater.repository.xml.spi")
+  api project(":one.lfa.updater.repository.api")
+  api project(":one.lfa.updater.xml.spi")
 
   api libraries.xerces
 
