--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include ":one.lfa.updater.repository.xml.v1_0"
 include ":one.lfa.updater.repository.xml.v2_0"
 include ":one.lfa.updater.services.api"
 include ":one.lfa.updater.tests"
+include ":one.lfa.updater.xml.spi"
