--- a/one.lfa.updater.repository.xml.v2_0/build.gradle
+++ b/one.lfa.updater.repository.xml.v2_0/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
-  api project(":one.lfa.updater.repository.xml.spi")
+  api project(":one.lfa.updater.repository.api")
+  api project(":one.lfa.updater.xml.spi")
 
   api libraries.xerces
 
