Rename APK installer package
Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.apkinstaller.device/src/main/AndroidManifest.xml
+++ b/one.lfa.updater.apkinstaller.device/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest package="au.org.libraryforall.updater.apkinstaller.device"/>
+<manifest package="one.lfa.updater.apkinstaller.device"/>
