--- a/one.lfa.updater.tests/build.gradle
+++ b/one.lfa.updater.tests/build.gradle
@@ -4,9 +4,9 @@ dependencies {
   implementation project(":one.lfa.updater.inventory.vanilla")
   implementation project(":one.lfa.updater.repository.api")
   implementation project(":one.lfa.updater.repository.xml.api")
-  implementation project(":one.lfa.updater.repository.xml.spi")
   implementation project(":one.lfa.updater.repository.xml.v1_0")
   implementation project(":one.lfa.updater.repository.xml.v2_0")
+  implementation project(":one.lfa.updater.xml.spi")
 
   implementation libraries.irradiaHTTPAPI
   implementation libraries.irradiaHTTPVanilla
