--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ include ":one.lfa.updater.installed.api"
 include ":one.lfa.updater.installed.vanilla"
 include ":one.lfa.updater.inventory.api"
 include ":one.lfa.updater.inventory.vanilla"
+include ":one.lfa.updater.opds.api"
+include ":one.lfa.updater.opds.xml.api"
 include ":one.lfa.updater.repository.api"
 include ":one.lfa.updater.repository.xml.api"
 include ":one.lfa.updater.repository.xml.v1_0"
