Implement OPDS manifest parsing
Affects: https://github.com/AULFA/updater/issues/12

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include ":one.lfa.updater.inventory.api"
 include ":one.lfa.updater.inventory.vanilla"
 include ":one.lfa.updater.opds.api"
 include ":one.lfa.updater.opds.xml.api"
+include ":one.lfa.updater.opds.xml.v1_0"
 include ":one.lfa.updater.repository.api"
 include ":one.lfa.updater.repository.xml.api"
 include ":one.lfa.updater.repository.xml.v1_0"
