Enable OPDS manifest services
Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.app/build.gradle
+++ b/one.lfa.updater.app/build.gradle
@@ -5,6 +5,9 @@ dependencies {
   implementation project(":one.lfa.updater.installed.vanilla")
   implementation project(":one.lfa.updater.inventory.api")
   implementation project(":one.lfa.updater.inventory.vanilla")
+  implementation project(":one.lfa.updater.opds.api")
+  implementation project(":one.lfa.updater.opds.xml.api")
+  implementation project(":one.lfa.updater.opds.xml.v1_0")
   implementation project(":one.lfa.updater.repository.api")
   implementation project(":one.lfa.updater.repository.xml.api")
   implementation project(":one.lfa.updater.repository.xml.v1_0")
