Implement OPDS downloads
This implements the logic required to download OPDS
catalogs. Currently, neither the UI or model have been updated to
know if a given OPDS catalog is currently "installed". However, the
current logic to download a catalog can be repeated indefinitely,
acting as an effective "update" procedure at all times. Additionally,
downloaded catalogs are downloaded to internal storage and are not
yet exposed to external applications.

Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.app/build.gradle
+++ b/one.lfa.updater.app/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
   implementation project(":one.lfa.updater.apkinstaller.api")
   implementation project(":one.lfa.updater.apkinstaller.device")
+  implementation project(":one.lfa.updater.credentials.api")
   implementation project(":one.lfa.updater.installed.api")
   implementation project(":one.lfa.updater.installed.vanilla")
   implementation project(":one.lfa.updater.inventory.api")
