Implement an OPDS catalog database
This implements a database abstraction that maintains a directory
of OPDS catalogs, and updates the inventory tasks to speak to the
database as a service rather than adjusting files manually.

Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.app/build.gradle
+++ b/one.lfa.updater.app/build.gradle
@@ -7,6 +7,8 @@ dependencies {
   implementation project(":one.lfa.updater.inventory.api")
   implementation project(":one.lfa.updater.inventory.vanilla")
   implementation project(":one.lfa.updater.opds.api")
+  implementation project(":one.lfa.updater.opds.database.api")
+  implementation project(":one.lfa.updater.opds.database.vanilla")
   implementation project(":one.lfa.updater.opds.xml.api")
   implementation project(":one.lfa.updater.opds.xml.v1_0")
   implementation project(":one.lfa.updater.repository.api")
