--- a/one.lfa.updater.inventory.vanilla/build.gradle
+++ b/one.lfa.updater.inventory.vanilla/build.gradle
@@ -3,6 +3,8 @@ dependencies {
   api project(":one.lfa.updater.installed.api")
   api project(":one.lfa.updater.inventory.api")
   api project(":one.lfa.updater.opds.api")
+  api project(":one.lfa.updater.opds.api")
+  api project(":one.lfa.updater.opds.database.api")
   api project(":one.lfa.updater.opds.xml.api")
   api project(":one.lfa.updater.repository.api")
   api project(":one.lfa.updater.repository.xml.api")
