--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,8 @@ include ":one.lfa.updater.installed.vanilla"
 include ":one.lfa.updater.inventory.api"
 include ":one.lfa.updater.inventory.vanilla"
 include ":one.lfa.updater.opds.api"
+include ":one.lfa.updater.opds.database.api"
+include ":one.lfa.updater.opds.database.vanilla"
 include ":one.lfa.updater.opds.xml.api"
 include ":one.lfa.updater.opds.xml.v1_0"
 include ":one.lfa.updater.repository.api"
