--- a/one.lfa.updater.app/src/main/AndroidManifest.xml
+++ b/one.lfa.updater.app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
   <application
     android:icon="@mipmap/ic_launcher"
     android:label="@string/main_title"
+    android:networkSecurityConfig="@xml/net_security_policy"
     android:name="au.org.libraryforall.updater.app.MainApplication">
 
     <provider
