--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,11 @@ buildscript {
   }
 
   dependencies {
-    classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:5.0.1"
+    classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:5.1.1"
     classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0"
     classpath "digital.wup:android-maven-publish:3.6.3"
-    classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.2"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    classpath 'com.android.tools.build:gradle:3.6.3'
+    classpath 'com.android.tools.build:gradle:4.0.1'
   }
 }
 
@@ -25,12 +24,11 @@ plugins {
   id "com.github.ben-manes.versions" version "0.23.0"
   id "com.vanniktech.android.junit.jacoco" version "0.15.0"
   id "digital.wup.android-maven-publish" version "3.6.2"
-  id "io.codearte.nexus-staging" version "0.21.0"
   id "ru.vyarus.animalsniffer" version "1.5.0"
 }
 
 ext {
-  androidBuildToolsVersion = "28.0.3"
+  androidBuildToolsVersion = "29.0.2"
   androidCompileSDKVersion = 28
   androidMinimumSDKVersion = 21
   androidTargetSDKVersion = 28
@@ -42,6 +40,16 @@ ext {
   if (!project.hasProperty("nexusPassword")) {
     logger.warn("No nexusPassword property specified: Using an empty value")
     nexusPassword = ""
+  }
+
+  if (project.hasProperty("one.lfa.directory.publish")) {
+    useDirectoryPublishPath = project.property("one.lfa.directory.publish")
+    useDirectoryPublish = true
+    logger.warn("one.lfa.directory.publish is set: We will publish artifacts to ${useDirectoryPublishPath}")
+  } else {
+    logger.warn("one.lfa.directory.publish is not set: We will not publish artifacts to a custom directory")
+    useDirectoryPublish = false
+    useDirectoryPublishPath = null
   }
 }
 
@@ -77,14 +85,7 @@ ext.libraries = [
   xerces                        : "xerces:xercesImpl:2.12.0"
 ]
 
-apply plugin: "io.codearte.nexus-staging"
 apply plugin: "com.vanniktech.android.junit.jacoco"
-
-nexusStaging {
-  packageGroup = "au.org.libraryforall"
-  numberOfRetries = 32
-  delayBetweenRetriesInMillis = 2000
-}
 
 allprojects {
   group = project.ext["GROUP"]
@@ -250,14 +251,23 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
     }
 
     repositories {
-      maven {
-        def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-        def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
-        url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
+      if (useDirectoryPublish) {
+        logger.info("Using ${useDirectoryPublishPath} for publication")
 
-        credentials(PasswordCredentials) {
-          username nexusUsername
-          password nexusPassword
+        maven {
+          name = "Directory"
+          url = "file://${useDirectoryPublishPath}"
+        }
+      }
+
+      if (version.endsWith("SNAPSHOT")) {
+        logger.info("Using Sonatype snapshots repository for publication")
+        maven {
+          url = "https://oss.sonatype.org/content/repositories/snapshots/"
+          credentials(PasswordCredentials) {
+            username mavenCentralUsername
+            password mavenCentralPassword
+          }
         }
       }
     }
@@ -266,6 +276,20 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
   signing {
     useGpgCmd()
     sign publishing.publications.basicJar
+  }
+
+  tasks.withType(Sign) { task ->
+    def isSnapshot = version.endsWith("SNAPSHOT")
+
+    // Sign release versions only; not snapshots
+    onlyIf {
+      if (isSnapshot) {
+        logger.warn("$POM_NAME: '$version' is a snapshot version; artifacts will not be signed")
+      } else {
+        logger.info("$POM_NAME: '$version' is a release version; artifacts will be signed")
+      }
+      return !isSnapshot
+    }
   }
 
   repositories {
