--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,7 @@ jobs:
         MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
         MAVEN_CENTRAL_STAGING_PROFILE_ID: '8ecc3ea87441e'
         MAVEN_CENTRAL_SIGNING_KEY_ID: '0x9100B73AD09BAC64'
+        LFA_KEYSTORE_PASSWORD: ${{ secrets.LFA_KEYSTORE_PASSWORD }}
+        LFA_BUILDS_SSH_KEY: ${{ secrets.LFA_BUILDS_SSH_KEY }}
         LFA_GITHUB_ACCESS_TOKEN: ${{ secrets.LFA_GITHUB_ACCESS_TOKEN }}
       run: ./.ci/pre.sh && ./.ci/build.sh && ./.ci/deploy.sh
-
