--- a/settings.gradle
+++ b/settings.gradle
@@ -17,5 +17,6 @@ include ":one.lfa.updater.repository.xml.api"
 include ":one.lfa.updater.repository.xml.v1_0"
 include ":one.lfa.updater.repository.xml.v2_0"
 include ":one.lfa.updater.services.api"
+include ":one.lfa.updater.taskrecorder"
 include ":one.lfa.updater.tests"
 include ":one.lfa.updater.xml.spi"
