--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
-  if ("$gradle.gradleVersion" != "6.3") {
-    throw new GradleException("Gradle version 6.3 is required (received $gradle.gradleVersion)")
+  if ("$gradle.gradleVersion" != "6.7") {
+    throw new GradleException("Gradle version 6.7 is required (received $gradle.gradleVersion)")
   }
 
-  ext.kotlin_version = "1.3.72"
+  ext.kotlin_version = "1.4.20"
 
   repositories {
     mavenCentral()
@@ -12,17 +12,14 @@ buildscript {
   }
 
   dependencies {
-    classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:5.1.1"
-    classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0"
-    classpath "digital.wup:android-maven-publish:3.6.3"
+    classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:5.2.0"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    classpath 'com.android.tools.build:gradle:4.0.1'
+    classpath 'com.android.tools.build:gradle:4.1.1'
   }
 }
 
 plugins {
   id "com.github.ben-manes.versions" version "0.23.0"
-  id "com.vanniktech.android.junit.jacoco" version "0.15.0"
   id "digital.wup.android-maven-publish" version "3.6.2"
   id "ru.vyarus.animalsniffer" version "1.5.0"
 }
@@ -32,15 +29,6 @@ ext {
   androidCompileSDKVersion = 28
   androidMinimumSDKVersion = 21
   androidTargetSDKVersion = 28
-
-  if (!project.hasProperty("nexusUsername")) {
-    logger.warn("No nexusUsername property specified: Using an empty value")
-    nexusUsername = ""
-  }
-  if (!project.hasProperty("nexusPassword")) {
-    logger.warn("No nexusPassword property specified: Using an empty value")
-    nexusPassword = ""
-  }
 
   if (project.hasProperty("one.lfa.directory.publish")) {
     useDirectoryPublishPath = project.property("one.lfa.directory.publish")
@@ -85,8 +73,6 @@ ext.libraries = [
   xerces                        : "xerces:xercesImpl:2.12.0"
 ]
 
-apply plugin: "com.vanniktech.android.junit.jacoco"
-
 allprojects {
   group = project.ext["GROUP"]
   version = project.ext["VERSION_NAME"]
@@ -101,6 +87,17 @@ subprojects { project ->
       apply plugin: "java"
       apply plugin: "java-library"
       apply plugin: "kotlin"
+
+      java {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+      }
+
+      compileKotlin {
+        kotlinOptions {
+          jvmTarget = "1.8"
+        }
+      }
 
       /*
        * Apply the Animal Sniffer plugin to check that code is Android compatible.
@@ -147,7 +144,7 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
           targetCompatibility JavaVersion.VERSION_1_8
         }
         kotlinOptions {
-          jvmTarget = JavaVersion.VERSION_1_8
+          jvmTarget = JavaVersion.VERSION_1_8.toString()
         }
       }
       break
@@ -172,7 +169,7 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
           targetCompatibility JavaVersion.VERSION_1_8
         }
         kotlinOptions {
-          jvmTarget = JavaVersion.VERSION_1_8
+          jvmTarget = JavaVersion.VERSION_1_8.toString()
         }
         testOptions {
           execution "ANDROID_TEST_ORCHESTRATOR"
@@ -193,103 +190,6 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
   task sourcesJar(type: Jar) {
     classifier = "sources"
     from "src/main/java", "src/main/resources"
-  }
-
-  apply plugin: "digital.wup.android-maven-publish"
-  apply plugin: "signing"
-
-  publishing {
-    publications {
-      basicJar(MavenPublication) {
-
-        switch (POM_PACKAGING) {
-          case "jar":
-            from components.java
-            break
-
-          case "apk":
-            break
-
-          case "aar":
-            from components.android
-            break
-        }
-
-        artifact sourcesJar
-        artifact javadocsJar
-
-        pom {
-          artifactId = POM_ARTIFACT_ID
-          name = POM_NAME
-          packaging = POM_PACKAGING
-          description = POM_DESCRIPTION
-          url = POM_URL
-
-          scm {
-            connection = POM_SCM_CONNECTION
-            developerConnection = POM_SCM_DEV_CONNECTION
-            url = POM_SCM_URL
-          }
-
-          licenses {
-            license {
-              name = POM_LICENCE_NAME
-              url = POM_LICENCE_URL
-            }
-          }
-
-          developers {
-            developer {
-              id = POM_DEVELOPER_ID
-              name = POM_DEVELOPER_NAME
-              email = POM_DEVELOPER_EMAIL
-              url = POM_DEVELOPER_URL
-            }
-          }
-        }
-      }
-    }
-
-    repositories {
-      if (useDirectoryPublish) {
-        logger.info("Using ${useDirectoryPublishPath} for publication")
-
-        maven {
-          name = "Directory"
-          url = "file://${useDirectoryPublishPath}"
-        }
-      }
-
-      if (version.endsWith("SNAPSHOT")) {
-        logger.info("Using Sonatype snapshots repository for publication")
-        maven {
-          url = "https://oss.sonatype.org/content/repositories/snapshots/"
-          credentials(PasswordCredentials) {
-            username mavenCentralUsername
-            password mavenCentralPassword
-          }
-        }
-      }
-    }
-  }
-
-  signing {
-    useGpgCmd()
-    sign publishing.publications.basicJar
-  }
-
-  tasks.withType(Sign) { task ->
-    def isSnapshot = version.endsWith("SNAPSHOT")
-
-    // Sign release versions only; not snapshots
-    onlyIf {
-      if (isSnapshot) {
-        logger.warn("$POM_NAME: '$version' is a snapshot version; artifacts will not be signed")
-      } else {
-        logger.info("$POM_NAME: '$version' is a release version; artifacts will be signed")
-      }
-      return !isSnapshot
-    }
   }
 
   repositories {
