--- a/one.lfa.updater.apkinstaller.api/build.gradle
+++ b/one.lfa.updater.apkinstaller.api/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
-  api libraries.googleGuava
+  api libraries.google_guava
 
-  implementation libraries.kotlinStdlib
+  implementation libraries.kotlin_stdlib
 
-  compileOnly libraries.OSGiBundleAnnotation
-  compileOnly libraries.OSGiBundleVersionAnnotation
+  compileOnly libraries.osgi_bundle_annotation
+  compileOnly libraries.osgi_bundle_version_annotation
 }
