--- a/one.lfa.updater.apkinstaller.device/build.gradle
+++ b/one.lfa.updater.apkinstaller.device/build.gradle
@@ -2,7 +2,7 @@ dependencies {
   api project(":one.lfa.updater.apkinstaller.api")
   api project(":one.lfa.updater.installed.api")
 
-  implementation libraries.androidXCore
-  implementation libraries.kotlinStdlib
+  implementation libraries.androidx_core
+  implementation libraries.kotlin_stdlib
   implementation libraries.slf4j
 }
