--- a/one.lfa.updater.installed.api/build.gradle
+++ b/one.lfa.updater.installed.api/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
-  api libraries.jodaTime
+  api libraries.joda_time
   api libraries.rxjava
 
-  implementation libraries.kotlinStdlib
+  implementation libraries.kotlin_stdlib
 
-  compileOnly libraries.OSGiBundleAnnotation
-  compileOnly libraries.OSGiBundleVersionAnnotation
+  compileOnly libraries.osgi_bundle_annotation
+  compileOnly libraries.osgi_bundle_version_annotation
 }
