--- a/one.lfa.updater.installed.vanilla/build.gradle
+++ b/one.lfa.updater.installed.vanilla/build.gradle
@@ -1,12 +1,12 @@
 dependencies {
   api project(":one.lfa.updater.installed.api")
 
-  implementation libraries.googleGuava
-  implementation libraries.kotlinStdlib
-  implementation libraries.jodaTime
+  implementation libraries.google_guava
+  implementation libraries.kotlin_stdlib
+  implementation libraries.joda_time
   implementation libraries.rxjava
   implementation libraries.slf4j
 
-  compileOnly libraries.OSGiBundleAnnotation
-  compileOnly libraries.OSGiBundleVersionAnnotation
+  compileOnly libraries.osgi_bundle_annotation
+  compileOnly libraries.osgi_bundle_version_annotation
 }
