--- a/one.lfa.updater.inventory.api/build.gradle
+++ b/one.lfa.updater.inventory.api/build.gradle
@@ -2,13 +2,13 @@ dependencies {
   api project(":one.lfa.updater.repository.api")
   api project(":one.lfa.updater.installed.api")
 
-  api libraries.googleGuava
-  api libraries.irradiaHTTPAPI
-  api libraries.jodaTime
-  api libraries.kotlinStdlib
+  api libraries.google_guava
+  api libraries.irradia_http_api
+  api libraries.joda_time
+  api libraries.kotlin_stdlib
   api libraries.rxjava
 
   compileOnly libraries.jcip
-  compileOnly libraries.OSGiBundleAnnotation
-  compileOnly libraries.OSGiBundleVersionAnnotation
+  compileOnly libraries.osgi_bundle_annotation
+  compileOnly libraries.osgi_bundle_version_annotation
 }
