Introduce installation passwords
This introduces a new v3 format that allows APKs and OPDS feeds to be
"protected" with hashed passwords. That is, the updater will prompt for
a password and the hash of the password must match that of the entry
in the repository. This first commit just updates the data structures
with the new information, and introduces a parser and serializer for
the v3 format. The updater does not yet prompt for a password.

--- a/one.lfa.updater.app/build.gradle
+++ b/one.lfa.updater.app/build.gradle
@@ -16,6 +16,7 @@ dependencies {
   implementation project(":one.lfa.updater.repository.xml.api")
   implementation project(":one.lfa.updater.repository.xml.v1_0")
   implementation project(":one.lfa.updater.repository.xml.v2_0")
+  implementation project(":one.lfa.updater.repository.xml.v3_0")
   implementation project(":one.lfa.updater.xml.spi")
 
   implementation libraries.android_material
