--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,7 @@ include ":one.lfa.updater.repository.api"
 include ":one.lfa.updater.repository.xml.api"
 include ":one.lfa.updater.repository.xml.v1_0"
 include ":one.lfa.updater.repository.xml.v2_0"
+include ":one.lfa.updater.repository.xml.v3_0"
 include ":one.lfa.updater.services.api"
 include ":one.lfa.updater.taskrecorder"
 include ":one.lfa.updater.tests"
