Fix bundled repositories in the updater app

--- a/one.lfa.updater.inclusiv/src/main/AndroidManifest.xml
+++ b/one.lfa.updater.inclusiv/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="au.org.libraryforall.updater.app">
+  package="au.org.libraryforall.updater.inclusiv">
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
