Update gradle settings

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,4 +22,5 @@ include ":one.lfa.updater.repository.xml.v3_0"
 include ":one.lfa.updater.services.api"
 include ":one.lfa.updater.taskrecorder"
 include ":one.lfa.updater.tests"
+include ":one.lfa.updater.ukraine"
 include ":one.lfa.updater.xml.spi"
