Build and upload Ukraine Updater

--- a/.ci-local/deploy-ssh.conf
+++ b/.ci-local/deploy-ssh.conf
@@ -1,5 +1,6 @@
 one.lfa.updater.app
 one.lfa.updater.inclusiv
+one.lfa.updater.ukraine
 #
 # Each line of this file that does not begin with '#' is the name of a project of which to
 # upload APK files over ssh.
